Pertemuan 5 In Progress

--- a/PPT/Pertemuan 4.tex
+++ b/PPT/Pertemuan 4.tex
@@ -56,7 +56,7 @@
 \end{frame}
 
 \begin{frame}{Introduction to jQuery}
-    \vskip-0.5cm
+    \vskip-0cm
     \begin{itemize}
         \item jQuery is a fast, small, and feature-rich JavaScript library.
         \item It simplifies HTML document traversing, event handling, animating, and Ajax interactions.
@@ -70,7 +70,7 @@
 % ... (previous frames)
 
 \begin{frame}[fragile]
-    \frametitle{JavaScript converter.js - Using jQuery}
+    \frametitle{jQuery converter.js}
     \begin{itemize}
         \item Modify file converter.js
         \item Function for Reverse Button (Next Pages)
