Update Pertemuan 5 a little and Completed Pertemuan 6

--- a/PPT/Pertemuan 5.tex
+++ b/PPT/Pertemuan 5.tex
@@ -272,7 +272,7 @@
     \vskip1cm
     \begin{lstlisting}[language=HTML]
 <body>
-  <div class="row">
+  <div class="row"> <!-- To apply grid in bootstrap, apply this first! -->
     <div class="col-7 left-section d-flex flex-column align-items-center justify-content-center">
 	<!-- This will contain the contents that is on the left side -->
       <div class="container-fluid d-flex flex-column align-items-center justify-content-center gap-4">
